# djangorestframework-filters-mini

./: .gitignore  Makefile  manage.py  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yaml
rest_framework_filters/: filterset.py
tests/: settings.py  test_backends.py  test_filterset.py
tests/testapp/: urls.py  views.py
