[metadata]
name = djangorestframework-filters-mini
version = 1.0.0
description = Better filtering for Django REST Framework
long_description = file: README.rst, LICENSE
license = MIT
license_file = LICENSE
url = https://github.com/mrg29/django-rest-framework-filters-mini
author = mrg29
author_email = 40182894+mrg29@users.noreply.github.com

[options]
python_requires = >=3.9
packages =
    rest_framework_filters
    rest_framework_filters.templatetags
install_requires =
    djangorestframework
    django-filter >= 2.0
zip_safe = False
include_package_data = True

[options.extras_require]
dev =
    black
    coverage
    pyflakes
